# aoc-rust

./: .gitignore  Cargo.toml  README.md
data/: cookie.example
src/: grid.rs  lib.rs  prelude.rs
utils/: Cargo.toml
utils/src/: bytes_ext.rs  dlx.rs  ext_int.rs  ext_u8_slice.rs  graph.rs  grid.rs  int_ext.rs  io.rs  lib.rs  name_pool.rs  parse.rs  prelude.rs  u8_slice.rs  union_find.rs
utils/src/grid/: iter.rs  point.rs  transform.rs
year2023/: Cargo.toml
year2023/src/: day01.rs  day02.rs  day20.rs  main.rs
year2024/: Cargo.toml
year2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
year2025/: Cargo.toml
year2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  main.rs
