[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28" 
linked-list = "0.1"
num-bigint = "0.4"
# petgraph = "0.6"
rayon = "1.5" 
regex = "1.5"  
reqwest = {version = "0.12" , features = ["blocking"] }
tokio = { version = "1.42", features = ["full"] }
# z3 = "0.12.1"